# AutodeskMachineControlFramework

./: .gitmodules  CMakeLists.txt  README.md  build_clean_linux64.sh  build_clean_win64.bat
.github/workflows/: build-and-test.yml
ACT/: LibMC.xml  LibMCData.xml  LibMCEnv.xml
Artifacts/: build_apidocs_clean.bat
Artifacts/apidocsdist/: _githash_apidocs.txt
Artifacts/clientdist/: _githash_client.txt
Artifacts/lib3mf/: _githash_lib3mf.txt  _githash_linux64_lib3mf.txt
BuildScripts/: createClientDist.go  createPackageXML.cpp
DevTools/: CMakeLists_Distrib.txt  build_clean_distrib_win64.bat
Drivers/: CMakeDriverCommon.txt  CMakeLists.txt
Drivers/A3200/: CMakeLists.txt
Drivers/ADS/: CMakeLists.txt
Drivers/ASL/: CMakeLists.txt
Drivers/BK9xxx/: CMakeLists.txt
Drivers/BuR/: CMakeLists.txt
Drivers/Camera/: CMakeLists.txt
Drivers/CifX/: CMakeLists.txt
Drivers/FrameBuffer/: CMakeLists.txt
Drivers/GRPC/: CMakeLists.txt
Drivers/LibOAPC/: CMakeLists.txt
Drivers/Marlin/: CMakeLists.txt
Drivers/OPCUA/: CMakeLists.txt
Drivers/OpenCV/: .gitignore  CMakeLists.txt
Drivers/OpenCV/LibOpenCV/: CMakeLists.txt  build_resource_win64.bat
Drivers/OpenCV/LibOpenCV/Headers/CppDynamic/: libopencv_dynamic.h  libopencv_dynamic.hpp  libopencv_types.hpp
Drivers/OpenCV/LibOpenCV/Implementation/: libopencv.cpp  libopencv_base.cpp  libopencv_base.hpp  libopencv_mat.cpp  libopencv_mat.hpp  libopencv_opencvcontext.cpp  libopencv_opencvcontext.hpp
Drivers/OpenCV/LibOpenCV/Interfaces/: libopencv_abi.hpp  libopencv_interfaceexception.cpp  libopencv_interfaceexception.hpp  libopencv_interfacejournal.cpp  libopencv_interfacejournal.hpp  libopencv_interfaces.hpp  libopencv_interfacewrapper.cpp  libopencv_types.hpp
Drivers/OpenFOAM/: CMakeLists.txt
Drivers/Rasterizer/: CMakeLists.txt
Drivers/RayLase/: CMakeLists.txt
Drivers/S7Net/: CMakeLists.txt
Drivers/ScanLab/: CMakeLists.txt
Drivers/ScanLabOIE/: CMakeLists.txt
Drivers/ScanLabSMC/: CMakeLists.txt
Drivers/TCPIP/: CMakeLists.txt
Drivers/TML/: CMakeLists.txt
Drivers/UART/: CMakeLists.txt
Drivers/Ximc/: CMakeLists.txt
Examples/LPBFSystem/: CMakePluginCommon.txt  config.xml
Framework/InterfacesCore/: libmc_abi.hpp  libmc_interfaces.hpp  libmc_interfacewrapper.cpp  libmc_types.hpp  libmcdata_abi.hpp  libmcdata_interfaces.hpp  libmcdata_interfacewrapper.cpp  libmcdata_types.hpp  libmcenv_abi.hpp  libmcenv_interfaces.hpp  libmcenv_interfacewrapper.cpp  libmcenv_types.hpp
Implementation/API/: amc_api_auth.cpp  amc_api_auth.hpp  amc_api_constants.hpp  amc_api_handler.cpp  amc_api_handler.hpp  amc_api_handler_apidocs.cpp  amc_api_handler_apidocs.hpp  amc_api_handler_build.cpp  amc_api_handler_build.hpp  amc_api_handler_external.cpp  amc_api_handler_frontend.cpp  amc_api_handler_frontend.hpp  amc_api_handler_ui.cpp  amc_api_handler_ui.hpp  amc_api_handler_upload.cpp  amc_api_session.cpp  amc_api_session.hpp  amc_api_sessionhandler.cpp  amc_api_sessionhandler.hpp
Implementation/Common/: common_chrono.cpp  common_exportstream_zip.cpp  common_jpeg.cpp  common_jpeg.hpp  common_utils.cpp
Implementation/Core/: amc_jsonwriter.cpp  amc_jsonwriter.hpp  amc_meshentity.cpp  amc_meshentity.hpp  amc_meshutils.cpp  amc_meshutils.hpp  amc_processcontroller.cpp  amc_processcontroller.hpp  amc_processdirectory.cpp  amc_processdirectory.hpp  amc_scatterplot.cpp  amc_scatterplot.hpp  amc_statesignal.cpp  amc_statesignal.hpp  amc_statesignalhandler.cpp  amc_statesignalhandler.hpp  amc_statesignaltypes.hpp  amc_toolpathentity.cpp  amc_toolpathentity.hpp  amc_toolpathhandler.cpp  amc_toolpathlayerdata.cpp  amc_toolpathlayerdata.hpp  amc_xmldocumentnode.cpp
Implementation/DataModel/: amcdata_databasemigrator.cpp  amcdata_databasemigrator_machineconfiguration.cpp  amcdata_databasemigrator_machineconfiguration.hpp
OpenAPI/: AMCF_OpenAPI.json  connect.py  index.html  swagger-initializer.js
(+331 files in other folders)
