#[[++

Copyright (C) 2024 Autodesk Inc.

All rights reserved.

Redistribution and use in source and binary forms, with or without
modification, are permitted provided that the following conditions are met:
    * Redistributions of source code must retain the above copyright
      notice, this list of conditions and the following disclaimer.
    * Redistributions in binary form must reproduce the above copyright
      notice, this list of conditions and the following disclaimer in the
      documentation and/or other materials provided with the distribution.
    * Neither the name of the Autodesk Inc. nor the
      names of its contributors may be used to endorse or promote products
      derived from this software without specific prior written permission.

THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS 'AS IS' AND
ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
DISCLAIMED. IN NO EVENT SHALL AUTODESK INC. BE LIABLE FOR ANY
DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
(INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
(INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.


This file has been generated by the Automatic Component Toolkit (ACT) version 1.8.0-develop.

Abstract: This is an autogenerated CMakeLists file for the development of Library Wrapper for OpenCV Computer Vision Library.

Interface version: 1.2.0


]]

cmake_minimum_required(VERSION 3.10)

### The implementation of the Library Wrapper for OpenCV Computer Vision Library component
project(LibOpenCV)

set (CMAKE_CXX_STANDARD 11)

# The location of autogenerated interfaces
set(CMAKE_CURRENT_AUTOGENERATED_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Interfaces)

file(GLOB LIBOPENCV_SRC
	${CMAKE_CURRENT_SOURCE_DIR}/Implementation/*.cpp
)
file(GLOB LIBOPENCV_HDR
	${CMAKE_CURRENT_SOURCE_DIR}/Implementation/*.hpp
)
set(LIBOPENCV_SRC ${LIBOPENCV_SRC} ${LIBOPENCV_SRC}
	${CMAKE_CURRENT_AUTOGENERATED_DIR}/libopencv_interfaceexception.cpp
	${CMAKE_CURRENT_AUTOGENERATED_DIR}/libopencv_interfacewrapper.cpp
	${CMAKE_CURRENT_AUTOGENERATED_DIR}/libopencv_interfacejournal.cpp
)

add_library(libopencv SHARED ${LIBOPENCV_SRC})
# Do not prefix the binary's name with "lib" on Unix systems:
set_target_properties(libopencv PROPERTIES PREFIX "" IMPORT_PREFIX "" )
# The following two properties are crucial to reduce the number of undesirably exported symbols
set_target_properties(libopencv PROPERTIES CXX_VISIBILITY_PRESET hidden)
set_target_properties(libopencv PROPERTIES VISIBILITY_INLINES_HIDDEN ON)
# This makes sure symbols are exported
target_compile_options(libopencv PRIVATE "-D__LIBOPENCV_EXPORTS")
target_include_directories(libopencv PRIVATE ${CMAKE_CURRENT_AUTOGENERATED_DIR})
target_include_directories(libopencv PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Implementation)


target_include_directories(libopencv PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)

IF(WIN32)
	target_link_libraries(libopencv ${CMAKE_CURRENT_SOURCE_DIR}/lib/opencv_world4110.lib)
ENDIF(WIN32)

set_target_properties(libopencv
    PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../Resources"
    RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_CURRENT_SOURCE_DIR}/../Resources"
    RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_CURRENT_SOURCE_DIR}/../Resources"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../Resources"
    
)

set_target_properties(libopencv PROPERTIES OUTPUT_NAME libopencv_x64)